tests/golden/errors/list_index_missing.py
xs = [1, 2, 3]
print(xs.index(9))
